fix: correct overflow scrollbar issue

--- a/src/assets/swagger-ui/swagger-ui-dark.css
+++ b/src/assets/swagger-ui/swagger-ui-dark.css
@@ -18,7 +18,6 @@ html {
     background: #1f1f1f !important;
     box-sizing: border-box;
     filter: contrast(100%) brightness(100%) saturate(100%);
-    overflow-y: scroll;
 }
 
 body {
