--- a/src/assets/swagger-ui/swagger-ui-light.css
+++ b/src/assets/swagger-ui/swagger-ui-light.css
@@ -8,7 +8,6 @@ html {
     background: #fafafa !important;
     box-sizing: border-box;
     filter: contrast(100%) brightness(100%) saturate(100%);
-    overflow-y: scroll;
 }
 
 
